--- a/js/package.json
+++ b/js/package.json
@@ -1,12 +1,13 @@
 {
     "devDependencies": {
-        "license-loader": "^0.5.0",
-        "ts-loader": "^2.0.3",
-        "typescript": "^2.3.2",
-        "uglifyjs-webpack-plugin": "^1.0.0-beta.2",
-        "webpack": "^2.5.1"
+        "license-loader": "^0.7.0",
+        "ts-loader": "^6.0.4",
+        "typescript": "^3.5.2",
+        "uglifyjs-webpack-plugin": "^2.1.3",
+        "webpack": "^4.35.2",
+        "webpack-cli": "^3.3.5"
     },
     "dependencies": {
-        "xterm": "^2.7.0"
+        "xterm": "^3.14.4"
     }
 }
