fix `tree /` bug https://stackoverflow.com/questions/14813472/binary-data-over-websocket-without-encoding-to-utf-8-or-base64 https://stackoverflow.com/questions/30106476/using-javascripts-atob-to-decode-base64-doesnt-properly-decode-utf-8-strings

--- a/js/tsconfig.json
+++ b/js/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-      "strictNullChecks": true,
+      "strictNullChecks": false,
       "noUnusedLocals" : true,
       "noImplicitThis": true,
       "alwaysStrict": true,
