--- a/js/package.json
+++ b/js/package.json
@@ -8,6 +8,7 @@
         "webpack-cli": "^3.3.5"
     },
     "dependencies": {
-        "xterm": "^3.14.4"
+        "xterm": "^4.2.0-vscode1",
+        "xterm-addon-fit": "^0.3.0"
     }
 }
