--- a/js/package.json
+++ b/js/package.json
@@ -3,11 +3,20 @@
         "license-loader": "^0.7.0",
         "ts-loader": "^6.0.4",
         "typescript": "^3.5.2",
-        "uglifyjs-webpack-plugin": "^2.1.3",
-        "webpack": "^4.35.2",
-        "webpack-cli": "^3.3.5"
+        "uglifyjs-webpack-plugin": "^2.2.0",
+        "webpack": "^4.41.2",
+        "webpack-cli": "^3.3.10"
     },
     "dependencies": {
+        "@babel/core": "^7.7.2",
+        "babel-loader": "^8.0.6",
+        "babel-minify-webpack-plugin": "^0.3.1",
+        "babel-preset-es2015": "^6.24.1",
+        "libapps": "git+https://github.com/btwiuse/libapps.git#hterm",
+        "libdot": "git+https://github.com/btwiuse/libdot.git#v3.0.9",
+        "terser-webpack-plugin": "^2.2.1",
+        "uglify-js": "^3.6.9",
+        "webpack-sources": "^1.4.3",
         "xterm": "^4.2.0-vscode1",
         "xterm-addon-fit": "^0.3.0"
     }
