--- a/js/package.json
+++ b/js/package.json
@@ -12,6 +12,7 @@
         "babel-loader": "^8.0.6",
         "babel-minify-webpack-plugin": "^0.3.1",
         "babel-preset-es2015": "^6.24.1",
+        "google-protobuf": "^3.11.1",
         "libapps": "git+https://github.com/btwiuse/libapps.git#hterm",
         "libdot": "git+https://github.com/btwiuse/libdot.git#v3.0.9",
         "terser-webpack-plugin": "^2.2.1",
