--- a/js/package.json
+++ b/js/package.json
@@ -19,6 +19,7 @@
         "uglify-js": "^3.6.9",
         "webpack-sources": "^1.4.3",
         "xterm": "^4.2.0-vscode1",
-        "xterm-addon-fit": "^0.3.0"
+        "xterm-addon-fit": "^0.3.0",
+        "xterm-addon-webgl": "^0.3.0"
     }
 }
