--- a/js/package.json
+++ b/js/package.json
@@ -19,6 +19,8 @@
         "http": "0.0.0",
         "libapps": "git+https://github.com/btwiuse/libapps.git#hterm",
         "libdot": "git+https://github.com/btwiuse/libdot.git#v3.0.9",
+        "lodash": "^4.17.19",
+        "minimist": "^1.2.5",
         "readline": "^1.3.0",
         "readline-browserify": "0.0.4",
         "stream": "0.0.2",
