--- a/js/package.json
+++ b/js/package.json
@@ -31,7 +31,6 @@
     "websocket-stream": "^5.5.0",
     "window-size": "^1.1.1",
     "xterm": "^5.0.0",
-    "xterm-addon-fit": "^0.6.0",
-    "xterm-addon-webgl": "^0.13.0"
+    "xterm-addon-fit": "^0.6.0"
   }
 }
