--- a/package.json
+++ b/package.json
@@ -5,5 +5,32 @@
   "main": "index.js",
   "repository": "https://github.com/btwiuse/wetty",
   "author": "navigaid <navigaid@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "keywords": [
+    "react",
+    "typescript",
+    "xterm.js",
+    "wetty"
+  ],
+  "scripts": {
+    "start": "concurrently --names tsc,esb -c green.bold,blue.bold --kill-others \"tsc --watch\" \"yarn:bundle --dev\" ",
+    "build": "concurrently --success --names tsc,esb -c green.bold,blue.bold tsc yarn:bundle",
+    "bundle": "node ./esbuild.config.mjs",
+    "clean": "rimraf www/dist",
+    "test": "echo 'TODO'"
+  },
+  "dependencies": {
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
+  },
+  "devDependencies": {
+    "@btwiuse/serve": "1.0.2",
+    "@types/node": "18.11.0",
+    "@types/react": "18.0.21",
+    "@types/react-dom": "18.0.6",
+    "concurrently": "7.4.0",
+    "esbuild": "0.15.11",
+    "rimraf": "3.0.2",
+    "typescript": "4.8.4"
+  }
 }
