--- a/package.json
+++ b/package.json
@@ -23,8 +23,9 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "styled-components": "^6.1.0",
-    "xterm": "^5.2.0",
+    "xterm": "^5.3.0",
     "xterm-addon-fit": "^0.8.0",
+    "xterm-addon-image": "^0.5.0",
     "xterm-addon-unicode11": "^0.6.0",
     "xterm-addon-web-links": "^0.9.0"
   },
@@ -38,5 +39,6 @@
     "esbuild": "0.19.5",
     "rimraf": "5.0.1",
     "typescript": "5.2.2"
-  }
+  },
+  "packageManager": "yarn@1.22.1"
 }
