--- a/package.json
+++ b/package.json
@@ -23,11 +23,11 @@
     "react": "18.3.1",
     "react-dom": "18.2.0",
     "styled-components": "^6.1.0",
-    "xterm": "^5.3.0",
-    "xterm-addon-fit": "^0.8.0",
-    "xterm-addon-image": "^0.5.0",
-    "xterm-addon-unicode11": "^0.6.0",
-    "xterm-addon-web-links": "^0.9.0"
+    "@xterm/xterm": "^5.5.0",
+    "@xterm/addon-fit": "^0.10.0",
+    "@xterm/addon-image": "^0.8.0",
+    "@xterm/addon-unicode11": "^0.8.0",
+    "@xterm/addon-web-links": "^0.11.0"
   },
   "devDependencies": {
     "@btwiuse/serve": "1.0.2",
