--- a/www/manifest.json
+++ b/www/manifest.json
@@ -11,5 +11,6 @@
   "start_url": "./",
   "theme_color": "#db7093",
   "background_color": "#222222",
-  "display": "minimal-ui"
+  "display": "standalone",
+  "display_override": ["window-controls-overlay"]
 }
