--- a/package.json
+++ b/package.json
@@ -20,14 +20,14 @@
     "test": "echo 'TODO'"
   },
   "dependencies": {
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
-    "styled-components": "^6.1.0",
-    "@xterm/xterm": "^5.5.0",
     "@xterm/addon-fit": "^0.10.0",
     "@xterm/addon-image": "^0.8.0",
     "@xterm/addon-unicode11": "^0.8.0",
-    "@xterm/addon-web-links": "^0.11.0"
+    "@xterm/addon-web-links": "^0.11.0",
+    "@xterm/xterm": "^5.5.0",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "styled-components": "^6.1.0"
   },
   "devDependencies": {
     "@btwiuse/serve": "1.0.2",
@@ -38,7 +38,8 @@
     "concurrently": "9.1.2",
     "esbuild": "0.25.1",
     "rimraf": "6.0.1",
-    "typescript": "5.8.2"
+    "typescript": "5.8.2",
+    "yargs": "^17.7.2"
   },
   "packageManager": "yarn@1.22.1"
 }
