--- a/package.json
+++ b/package.json
@@ -38,8 +38,7 @@
     "concurrently": "9.1.2",
     "esbuild": "0.25.1",
     "rimraf": "6.0.1",
-    "typescript": "5.8.2",
-    "yargs": "^17.7.2"
+    "typescript": "5.8.2"
   },
   "packageManager": "yarn@1.22.1"
 }
